@@ -2,29 +2,33 @@ package io.ejangs.docsa.domain.doc.unit;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 import io.ejangs.docsa.domain.branch.dao.mysql.BranchRepository;
 import io.ejangs.docsa.domain.commit.dao.mysql.CommitRepository;
-import io.ejangs.docsa.domain.doc.dao.mysql.EdgeRepository;
-import io.ejangs.docsa.domain.doc.dto.graph.GraphBranchDto;
-import io.ejangs.docsa.domain.doc.dto.graph.GraphCommitDto;
 import io.ejangs.docsa.domain.doc.app.DocService;
 import io.ejangs.docsa.domain.doc.dao.mysql.DocRepository;
-import io.ejangs.docsa.domain.doc.dto.graph.GraphEdgeDto;
+import io.ejangs.docsa.domain.doc.dao.mysql.EdgeRepository;
+import io.ejangs.docsa.domain.doc.dto.RecentActivityDto;
 import io.ejangs.docsa.domain.doc.dto.RecentActivityDto.RecentType;
+import io.ejangs.docsa.domain.doc.dto.graph.GraphBranchDto;
+import io.ejangs.docsa.domain.doc.dto.graph.GraphCommitDto;
+import io.ejangs.docsa.domain.doc.dto.graph.GraphEdgeDto;
 import io.ejangs.docsa.domain.doc.dto.request.DocTitleRequest;
 import io.ejangs.docsa.domain.doc.dto.response.CommitGraphResponse;
+import io.ejangs.docsa.domain.doc.dto.response.DocListResponse;
 import io.ejangs.docsa.domain.doc.dto.response.DocListSimpleResponse;
 import io.ejangs.docsa.domain.doc.dto.response.DocTitleOnlyResponse;
 import io.ejangs.docsa.domain.doc.dto.response.DocTitleUpdateResponse;
 import io.ejangs.docsa.domain.doc.entity.Doc;
+import io.ejangs.docsa.domain.doc.util.DocListAssembler;
 import io.ejangs.docsa.domain.doc.util.DocTestUtils;
 import io.ejangs.docsa.domain.save.util.PageableFactory;
 import io.ejangs.docsa.domain.user.entity.User;
 import io.ejangs.docsa.global.exception.CustomException;
-
 import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
@@ -36,7 +40,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.test.util.ReflectionTestUtils;
 
@@ -50,6 +53,9 @@ public class DocServiceUnitTests {
     private DocRepository docRepository;
 
     @Mock
+    private DocListAssembler docListAssembler;
+
+    @Mock
     private BranchRepository branchRepository;
 
     @Mock
@@ -61,38 +67,98 @@ public class DocServiceUnitTests {
     @Test
     @DisplayName("사이드바 문서 목록 조회 성공 테스트")
     void getSimpleDocumentListSuccess() throws Exception {
-
         // given
         Long userId = 1L;
         User user = DocTestUtils.createUser();
         ReflectionTestUtils.setField(user, "id", userId);
 
-        Long docId = 10L;
         List<Doc> content = DocTestUtils.createDocumentListForUnitTest(2, user);
         Pageable pageable = PageableFactory.create("updatedAt", "desc", 0, 10);
+        Page<Doc> docs = new PageImpl<>(content, pageable, content.size());
 
-        Page<Doc> docs = new PageImpl<>(
-                content,
-                PageRequest.of(0, 10),
-                content.size()
+        List<DocListSimpleResponse> expectedResponses = List.of(
+                new DocListSimpleResponse(
+                        1L,
+                        "테스트 문서 1",
+                        LocalDateTime.of(2025, 7, 16, 2, 0),
+                        LocalDateTime.of(2025, 7, 16, 2, 0),
+                        new RecentActivityDto(RecentType.SAVE, 10L)
+                ),
+                new DocListSimpleResponse(
+                        2L,
+                        "테스트 문서 2",
+                        LocalDateTime.of(2025, 7, 16, 3, 0),
+                        LocalDateTime.of(2025, 7, 16, 3, 0),
+                        new RecentActivityDto(RecentType.COMMIT, 200L)
+                )
         );
+        Page<DocListSimpleResponse> dummyPage = new PageImpl<>(expectedResponses, pageable,
+                expectedResponses.size());
 
         when(docRepository.findAllByUserId(userId, pageable)).thenReturn(docs);
+        when(docListAssembler.assembleDocListSimple(docs)).thenReturn(dummyPage);
 
         // when
         Page<DocListSimpleResponse> page = docService.getSimpleList(userId, pageable);
         List<DocListSimpleResponse> result = page.getContent();
+
         // then
         assertEquals(2, result.size());
-        assertEquals("테스트 문서 1", result.getFirst().title());
 
-        assertEquals(RecentType.SAVE, result.getFirst().recent().recentType());
-        assertEquals(10L, result.getFirst().recent().recentTypeId());
+        assertEquals("테스트 문서 1", result.get(0).title());
+        assertEquals(RecentType.SAVE, result.get(0).recent().recentType());
+        assertEquals(10L, result.get(0).recent().recentTypeId());
 
-        assertEquals(RecentType.COMMIT, result.getLast().recent().recentType());
-        assertEquals(200L, result.getLast().recent().recentTypeId());
+        assertEquals("테스트 문서 2", result.get(1).title());
+        assertEquals(RecentType.COMMIT, result.get(1).recent().recentType());
+        assertEquals(200L, result.get(1).recent().recentTypeId());
 
         verify(docRepository).findAllByUserId(userId, pageable);
+        verify(docListAssembler).assembleDocListSimple(docs);
+    }
+
+    @Test
+    @DisplayName("검색 키워드를 포함한 제목을 가진 문서가 있으면 검색 결과를 페이지로 반환한다.")
+    void searchDocTitleSuccess() throws Exception {
+        // given
+        String keyword = "문서 1";
+        Long userId = 1L;
+        User user = DocTestUtils.createUser();
+        ReflectionTestUtils.setField(user, "id", userId);
+
+        // 전체 문서 생성
+        List<Doc> allDocs = DocTestUtils.createDocumentListForUnitTest(100, user);
+
+        // 키워드 필터링 + 정렬
+        List<Doc> filtered = allDocs.stream()
+                .filter(d -> d.getTitle().contains(keyword))
+                .sorted(Comparator.comparing(Doc::getUpdatedAt).reversed())
+                .toList();
+
+        Pageable pageable = PageableFactory.create("updatedAt", "desc", 0, 10);
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), filtered.size());
+        List<Doc> pagedDocs = filtered.subList(start, end);
+
+        Page<Doc> docsPage = new PageImpl<>(pagedDocs, pageable, filtered.size());
+        Page<DocListResponse> responsesPage = DocTestUtils.convertToDocListResponsePage(pagedDocs,
+                pageable);
+
+        when(docRepository.searchDocByTitle(keyword, userId, pageable)).thenReturn(docsPage);
+        when(docListAssembler.assembleDocList(docsPage)).thenReturn(responsesPage);
+
+        // when
+        Page<DocListResponse> page = docService.searchList(userId, keyword, pageable);
+        List<DocListResponse> result = page.getContent();
+
+        // then
+        assertEquals(10, result.size());
+        assertEquals("테스트 문서 100", result.get(0).title());
+        assertEquals("테스트 문서 19", result.get(1).title());
+        assertEquals("테스트 문서 11", result.getLast().title());
+
+        verify(docRepository).searchDocByTitle(keyword, userId, pageable);
+        verify(docListAssembler).assembleDocList(docsPage);
     }
 
     @Test
